--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -29,9 +29,14 @@
 }
 
 .Business-address {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.Business-address p:hover {
+  text-decoration: underline;
 }
 
 .Business-reviews {
